--- a/src/app/modules/empleado/pages/curso-list/curso-list.component.html
+++ b/src/app/modules/empleado/pages/curso-list/curso-list.component.html
@@ -1,8 +1,8 @@
 <div class="main-container">
   <p-card header="Mis cursos Externos">
     <div class="contenedor-botones">
-      <button pButton pRipple severity="info" (click)="redirigir()">
-        ➕ <span pButtonLabel>Agregar Curso Externo</span>
+      <button pButton pRipple severity="primary"  icon="pi pi-plus" (click)="redirigir()">
+       <span pButtonLabel>Agregar Curso Externo</span>
       </button>
     </div>
     <p></p>
