--- a/src/app/modules/empleado/pages/agregar-curso-externo/agregar-curso-externo.component.scss
+++ b/src/app/modules/empleado/pages/agregar-curso-externo/agregar-curso-externo.component.scss
@@ -48,7 +48,15 @@
   
   input, p-dropdown, p-calendar {
     width: 100%;
+    height: 40px;
+   border-radius: 5px;
+   border: 1.2px solid #797979; 
+  box-shadow: none; 
   }
+  input:focus, p-dropdown:focus, p-calendar:focus {
+    border: 1px solid #414242; 
+    outline: none; 
+}
   
   // Estilo personalizado para los inputs
   ::ng-deep .p-inputtext {
