--- a/src/app/modules/empleado/pages/perfil/perfil.component.scss
+++ b/src/app/modules/empleado/pages/perfil/perfil.component.scss
@@ -20,6 +20,7 @@
   transition: margin-left 0.3s ease;
   background-color: #fafafa;
   min-height: calc(100vh - 48px);
+  border-radius: 0.7em;
 }
 
 /* Estilo para la tarjeta principal */
