--- a/src/app/modules/recursos-humanos/pages/cursos-internos-list/cursos-internos-list.component.scss
+++ b/src/app/modules/recursos-humanos/pages/cursos-internos-list/cursos-internos-list.component.scss
@@ -10,6 +10,7 @@
     display: flex;
     justify-content: flex-end; 
     gap: 10px; 
+    margin-bottom: 10px; 
 }
 
   .label-container {
@@ -19,3 +20,4 @@
     margin-right: 10px;
     margin-bottom: 70px; 
 }
+
