--- a/src/app/modules/recursos-humanos/pages/empleado-list/empleado-list.component.scss
+++ b/src/app/modules/recursos-humanos/pages/empleado-list/empleado-list.component.scss
@@ -8,6 +8,7 @@
     display: flex;            
     gap: 10px;               
     justify-content: flex-end;
+
   }
   
   .boton {
@@ -25,3 +26,10 @@
     background-color: rgb(255, 77, 77); /* Un rojo más claro al pasar el mouse */
     border-color: rgb(255, 77, 77); /* El contorno también cambia a un rojo más claro */
   }
+  .p-datatable th:nth-child(6) { /* Ajusta según la posición de la columna */
+    width: 7rem !important; 
+    max-width: 7rem !important; 
+    overflow: hidden;
+    white-space: nowrap;
+    height: 2px;
+}
