--- a/src/app/modules/recursos-humanos/pages/seleccionar-empleados/seleccionar-empleados.component.html
+++ b/src/app/modules/recursos-humanos/pages/seleccionar-empleados/seleccionar-empleados.component.html
@@ -21,7 +21,7 @@
   <button class="botonc" pButton pRipple aria-label="Cancelar" severity="info" (click)="redirigir()">
     <span pButtonLabel>Cancelar</span>
   </button>
-  
-  <p-button label="Guardar" (click)="guardar()"></p-button>
+
+  <p-button severity="success" label="Guardar" (click)="guardar()"></p-button>
 </div>
   
