--- a/src/app/modules/recursos-humanos/pages/seleccionar-empleados/seleccionar-empleados.component.scss
+++ b/src/app/modules/recursos-humanos/pages/seleccionar-empleados/seleccionar-empleados.component.scss
@@ -2,6 +2,7 @@
     display: flex;            
     gap: 10px;               
     justify-content: flex-end;
+    margin-top: 1.2em;
   }
   
   .boton {
@@ -21,4 +22,5 @@
     background-color: rgb(255, 77, 77) !important; 
     border-color: rgb(255, 77, 77) !important; 
   }
+
   
