--- a/src/app/shared/menu-lateral/menu-lateral.component.scss
+++ b/src/app/shared/menu-lateral/menu-lateral.component.scss
@@ -29,7 +29,7 @@
   width: 3rem;
   height: 3rem;
   border-radius: 50%;
-  background-color: #f8f9fa;
+  background-color: #7ba3c9;
   border: none;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   display: flex;
