--- a/src/app/modules/empleado/pages/perfil/perfil.component.scss
+++ b/src/app/modules/empleado/pages/perfil/perfil.component.scss
@@ -27,23 +27,34 @@
   border-radius: var(--border-radius);
   box-shadow: var(--shadow);
   background-color: white;
-  
+
   .p-card-header {
     padding: 16px 24px;
     border-bottom: 1px solid #eee;
   }
-  
+
   .p-card-content {
     padding: 24px;
   }
 }
 
-/* Título del encabezado */
-.header-title {
-  font-size: 1.5rem;
-  font-weight: 500;
-  color: var(--text-color);
-  padding: 8px 0;
+/* Parte del encabezado */
+
+.header-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+  width: 100%;
+  background: rgb(154, 87, 87);
+  border-radius: 8px 8px 0 0;
+
+  .header-title {
+    font-size: 1.75rem;
+    font-weight: 500;
+    color: #000;
+    margin-left: 1rem;
+  }
 }
 
 /* Botones de acción */
@@ -52,10 +63,10 @@
   justify-content: flex-end;
   gap: 12px;
   margin-bottom: 24px;
-  
+
   .p-button {
     transition: var(--transition);
-    
+
     &:hover {
       transform: translateY(-2px);
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -68,7 +79,7 @@
   margin-bottom: 24px;
   border-radius: var(--border-radius);
   border: 1px solid #e0e0e0;
-  
+
   .p-fieldset-legend {
     padding: 8px 16px;
     font-size: 1rem;
@@ -77,7 +88,7 @@
     border: 1px solid #e0e0e0;
     border-radius: var(--border-radius);
   }
-  
+
   .p-fieldset-content {
     padding: 16px;
   }
@@ -88,18 +99,18 @@
   display: flex;
   flex-wrap: wrap;
   margin: -8px;
-  
+
   .p-col-12 {
     width: 100%;
     padding: 8px;
   }
-  
+
   .p-md-6 {
     @media (min-width: 768px) {
       width: calc(50% - 16px);
     }
   }
-  
+
   .p-md-3 {
     @media (min-width: 768px) {
       width: calc(25% - 16px);
@@ -111,13 +122,13 @@
 .label-container {
   margin-bottom: 20px;
   width: 100%;
-  
+
   @media (min-width: 768px) {
     width: 48%;
     margin-right: 2%;
     display: inline-block;
   }
-  
+
   &:nth-child(even) {
     margin-right: 0;
   }
@@ -135,8 +146,8 @@
     font-size: 0.85rem;
     color: var(--light-text);
   }
-  
-  input:focus ~ label {
+
+  input:focus~label {
     color: var(--primary-color);
   }
 }
@@ -150,7 +161,7 @@
 /* Sección de contacto */
 .contact-group {
   margin-bottom: 24px;
-  
+
   .p-button-text {
     padding: 8px 16px;
     margin-top: 8px;
@@ -168,7 +179,7 @@
   margin-bottom: 12px;
   padding-bottom: 4px;
   border-bottom: 1px solid #eee;
-  
+
   span {
     font-weight: 500;
     color: var(--text-color);
@@ -179,15 +190,15 @@
   display: flex;
   align-items: center;
   margin-bottom: 12px;
-  
+
   :host ::ng-deep .p-inputgroup {
     width: 100%;
-    
+
     .p-inputtext {
       border-top-right-radius: 0;
       border-bottom-right-radius: 0;
     }
-    
+
     .p-button {
       border-top-left-radius: 0;
       border-bottom-left-radius: 0;
