Style: Cambiar UI del perfil en el paratdo de subir y eliminar foto

--- a/src/app/modules/empleado/pages/perfil/foto-perfil/foto-perfil.component.html
+++ b/src/app/modules/empleado/pages/perfil/foto-perfil/foto-perfil.component.html
@@ -1,25 +1,30 @@
 <div class="foto-perfil-container">
   <div class="foto-wrapper">
-    <img [src]="fotoUrl" alt="Foto de perfil" class="foto-preview" />
+    <div class="foto-preview-container" [class.has-foto]="empleado.FotoEmpleado">
+      <img [src]="fotoUrl" alt="Foto de perfil" class="foto-preview" />
 
-    <div class="acciones" *ngIf="!cargando">
-      <input type="file" id="fileInput" (change)="onFileSelected($event)" accept="image/*" style="display: none" />
+      <div class="overlay" *ngIf="!cargando">
+        <input type="file" id="fileInput" (change)="onFileSelected($event)" accept="image/*" style="display: none" />
 
-      <label for="fileInput" class="boton-upload">
-        <i class="pi pi-upload"></i>
-        Cambiar foto
-      </label>
-
-      <button pButton *ngIf="empleado.FotoEmpleado" label="Eliminar foto" icon="pi pi-trash" class="p-button-danger"
-        (click)="eliminarFoto()"></button>
+        <label for="fileInput" class="cambiar-btn">
+          <i class="pi pi-camera"></i>
+          <span class="btn-label">Cambiar foto</span>
+        </label>
+      </div>
     </div>
 
-    <p-progressSpinner *ngIf="cargando" styleClass="w-2rem h-2rem" strokeWidth="4"
-      animationDuration=".5s"></p-progressSpinner>
+    <div class="acciones" *ngIf="!cargando">
+      <button pButton *ngIf="empleado.FotoEmpleado" icon="pi pi-trash" label="Eliminar foto"
+        class="p-button-text p-button-danger p-button-sm" (click)="eliminarFoto()">
+      </button>
+    </div>
+
+    <div class="spinner-container" *ngIf="cargando">
+      <p-progressSpinner styleClass="w-2rem h-2rem" strokeWidth="4" animationDuration=".5s">
+      </p-progressSpinner>
+    </div>
   </div>
-  <p-confirmDialog 
-    [style]="{ width: '450px' }" 
-    [baseZIndex]="10000"
-    rejectButtonStyleClass="p-button-text">
+
+  <p-confirmDialog [style]="{ width: '450px' }" [baseZIndex]="10000" rejectButtonStyleClass="p-button-text">
   </p-confirmDialog>
 </div>
