--- a/src/app/modules/empleado/pages/perfil/referencias-familiares/referencias-familiares.component.html
+++ b/src/app/modules/empleado/pages/perfil/referencias-familiares/referencias-familiares.component.html
@@ -29,6 +29,11 @@
 
             <div class="label-container">
                 <p-floatLabel>
+                    <div class="contacto contacto2">
+                        <span class="p-inputgroup-addon">
+                          <i class="pi pi-envelope"></i>
+                        </span>
+                      </div>
                     <input pInputText [(ngModel)]="ref.CorreoElectronico" [readonly]="!isEditMode" />
                     <label>Correo</label>
                 </p-floatLabel>
