--- a/src/app/modules/empleado/pages/perfil/perfil.component.html
+++ b/src/app/modules/empleado/pages/perfil/perfil.component.html
@@ -73,16 +73,18 @@
           <div class="contact-header">
             <div class="bloque2">
               <span class="contact-title">Correos electrónicos</span>
-            </div>
-            <button pButton icon="pi pi-plus" class="p-button-rounded p-button-text p-button-sm" (click)="addNewEmail()"
+              <button pButton icon="pi pi-plus" class="p-button-rounded p-button-text p-button-sm" (click)="addNewEmail()"
               *ngIf="isEditMode"></button>
+            </div>
           </div>
 
           <div *ngFor="let correo of empleado.CorreoElectronico; let i = index" class="contact-field">
             <p-inputGroup>
-              <span class="p-inputgroup-addon">
-                <i class="pi pi-envelope"></i>
-              </span>
+              <div class="contacto contacto2">
+                <span class="p-inputgroup-addon">
+                  <i class="pi pi-envelope"></i>
+                </span>
+              </div>
               <input pInputText type="email" [(ngModel)]="empleado.CorreoElectronico[i]" [readonly]="!isEditMode"
                 placeholder="Correo Electrónico" />
               <button pButton icon="pi pi-trash" class="p-button-danger" (click)="removeEmail(i)"
@@ -96,19 +98,21 @@
           <div class="contact-header">
             <div class="bloque2">
               <span class="contact-title">Teléfonos</span>
-            </div>
-            <button pButton icon="pi pi-plus" class="p-button-rounded p-button-text p-button-sm" (click)="addNewPhone()"
+              <button pButton icon="pi pi-plus" class="p-button-rounded p-button-text p-button-sm" (click)="addNewPhone()"
               *ngIf="isEditMode"></button>
+            </div>
           </div>
 
           <div *ngFor="let telefono of empleado.Telefono; let i = index" class="contact-field">
             <p-inputGroup>
-              <span class="p-inputgroup-addon">
-                <i class="pi pi-phone"></i>
-              </span>
+              <div class="contacto">
+                <span class="p-inputgroup-addon">
+                  <i class="pi pi-phone"></i>
+                </span>
+              </div>
               <input pInputText type="text" [(ngModel)]="empleado.Telefono[i]" [readonly]="!isEditMode"
                 placeholder="Teléfono" />
-              <button pButton icon="pi pi-trash" class="p-button-danger" (click)="removePhone(i)"
+              <button pButton icon="pi pi-times" class="p-button-danger" (click)="removePhone(i)"
                 *ngIf="isEditMode"></button>
             </p-inputGroup>
           </div>
